--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.1",
+    "vue-emoji-picker": "^1.0.3",
     "vue2-waterfall": "^3.0.1",
     "vuetify": "^2.6.0"
   },
