--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "hls.js": "^1.1.5",
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
+    "vue-aplayer": "^1.6.1",
     "vue-axios": "^3.4.1",
     "vue-emoji-picker": "^1.0.3",
     "vue2-waterfall": "^3.0.1",
