--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-axios": "^3.4.1",
     "vue-emoji-picker": "^1.0.3",
     "vue2-waterfall": "^3.0.1",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
